manifests/dev/snapshot-controller/CiliumNetworkPolicy-snapshot-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: snapshot-controller
  namespace: snapshot-controller
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: snapshot-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
